--- a/Discotheque/src/discotheque/JFrameArtistes.form
+++ b/Discotheque/src/discotheque/JFrameArtistes.form
@@ -10,9 +10,6 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
-  <Events>
-    <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="formFocusGained"/>
-  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -39,7 +36,9 @@
                       <Component id="BTN_Suivant" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="BTN_Dernier" min="-2" pref="75" max="-2" attributes="0"/>
-                      <EmptySpace min="35" pref="293" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="BTN_Disques" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -140,6 +139,7 @@
                   <Component id="BTN_Dernier" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="BTN_Premier" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="BTN_Suivant" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="BTN_Disques" alignment="0" min="-2" pref="23" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -326,6 +326,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="(affiche les diques de l&apos;artiste s&#xe9;lectionn&#xe9;)"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="BTN_Disques">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Afficher tous les disques"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BTN_DisquesActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
