--- a/Discotheque/src/discotheque/JFrameArtistes.form
+++ b/Discotheque/src/discotheque/JFrameArtistes.form
@@ -10,6 +10,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="formFocusGained"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -134,12 +137,14 @@
                   </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="BTN_Precedent" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="BTN_Dernier" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="BTN_Premier" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="BTN_Suivant" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="BTN_Disques" alignment="0" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="BTN_Precedent" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="BTN_Dernier" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="BTN_Premier" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="BTN_Suivant" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
